--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
       {% endif %}
       {% if current_user.role == 'admin' %}
       <li><a class="nav-link" href="{{ url_for('zones') }}">Зоны доставки</a></li>
-      <li><a class="nav-link" href="{{ url_for('workarea') }}">Рабочая область</a></li>
+      <li><a class="nav-link" href="{{ url_for('work_area_page') }}">Рабочая область</a></li>
       <li><a class="nav-link" href="{{ url_for('users') }}">Пользователи</a></li>
       <li><a class="nav-link" href="{{ url_for('stats') }}">Статистика</a></li>
       <li><a class="nav-link" href="{{ url_for('reports') }}">Отчёты</a></li>
@@ -63,7 +63,7 @@
         {% endif %}
         {% if current_user.role == 'admin' %}
         <li><a class="nav-link" href="{{ url_for('zones') }}">Зоны доставки</a></li>
-        <li><a class="nav-link" href="{{ url_for('workarea') }}">Рабочая область</a></li>
+        <li><a class="nav-link" href="{{ url_for('work_area_page') }}">Рабочая область</a></li>
         <li><a class="nav-link" href="{{ url_for('users') }}">Пользователи</a></li>
         <li><a class="nav-link" href="{{ url_for('stats') }}">Статистика</a></li>
         <li><a class="nav-link" href="{{ url_for('reports') }}">Отчёты</a></li>
