--- a/templates/zone_form.html
+++ b/templates/zone_form.html
@@ -14,7 +14,7 @@
     <label class="form-label">Цвет</label>
     <input type="color" class="form-control form-control-color" id="colorInput" name="color" value="{{ zone.color }}">
   </div>
-  <div id="zone-map" class="map-responsive leaflet-map mb-3"></div>
+  <div id="zoneMap" style="height: 500px;"></div>
   <input type="hidden" name="geojson" id="geojsonInput">
   <button type="submit" class="btn btn-primary">Сохранить</button>
   <a href="{{ url_for('zones') }}" class="btn btn-secondary">Отмена</a>
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
-<script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
 <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
 <script>
   window.existingZone = {{ zone_geojson|tojson if zone_geojson else 'null' }};
