--- a/templates/zone_form.html
+++ b/templates/zone_form.html
@@ -16,6 +16,7 @@
   </div>
   <div id="zoneMap" style="height: 500px;"></div>
   <input type="hidden" name="geojson" id="geojsonInput">
+  <input type="hidden" name="geometry" id="geometry-input">
   <button type="submit" class="btn btn-primary">Сохранить</button>
   <a href="{{ url_for('zones') }}" class="btn btn-secondary">Отмена</a>
 </form>
