--- a/templates/orders.html
+++ b/templates/orders.html
@@ -25,7 +25,8 @@
 </ul>
 <div class="tab-content">
   <div class="tab-pane fade show active" id="tabAll">
-    {% for batch, lst in orders_by_batch.items() %}
+    {% for batch in import_batches %}
+    {% set lst = orders_by_batch[batch] %}
     <div class="mb-2">
       <div class="d-flex justify-content-between align-items-center">
         <h5 class="mb-0">{{ batch.name }}{% if batch.created_at %} ({{ batch.created_at.strftime('%d.%m.%Y %H:%M') }}){% endif %}</h5>
